@@ -1,3 +1,12 @@
+2009-05-06  Sayamindu Dasgupta <sayamindu@laptop.org>
+
+	https://bugs.freedesktop.org/show_bug.cgi?id=21578 - Make use 
+	of glib-mkenums
+	* libxklavier/Makefile.am: Use glib-mkenums
+	* libxklavier/xklavier.c (xkl_engine_class_init): Do not use 
+	g_flags_register_static for XklEngineFeatures here.
+	* libxklavier/xklavier.h: Include xkl-enum-types.h
+
 2009-06-24  svu
 
 	* libxklavier/xklavier_config.c, libxklavier/xklavier_config_iso.c: avoiding
